add social links

--- a/_config.yml
+++ b/_config.yml
@@ -65,11 +65,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: ehsk # your GitHub user name
+github_username: anaeim # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: ehsk0 # your Twitter handle
-linkedin_username: ehsan-kamalloo-06b18615a # your LinkedIn user name
-scholar_userid: fbXV5WcAAAAJ # your Google Scholar ID
+twitter_username: ali_naeimabadi # your Twitter handle
+linkedin_username: naeim-ali # your LinkedIn user name
+scholar_userid: RKY8iVoAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
