--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,11 +9,21 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Alberta, Edmonton, Canada
-      year: 2022
+    - title: MSc.
+      institution: <a href="https://www.ualberta.ca/computing-science/index.html"> University of Alberta</a>, Edmonton, Canada
+      year: 2020
       description:
-        - <u>Thesis:</u> Robust Knowledge Acquisition in Answering Information-seeking Questions.
+        - <u>Thesis:</u> Product entity matching by leveraging Pre-trained Langauge Models and  tabular data. 
+        - <u>Supervisor:</u> <a href="https://www.instagram.com/ualbertaswimclub/">Prof. Davood Rafiei</a>.
+
+
+    - title: BSc.
+      institution: <a href="https://aut.ac.ir/en"> Amirkabir University of Technology</a>, Tehran, Iran
+      year: 2011
+      description:
+        - <u>Thesis:</u> Microscope images processing to predict fracture strength of nanoclay/polyamide 12 nanocomposite using CNN. 
+        - <u>Supervisor:</u> <a href="https://profile.ut.ac.ir/en/~f.hemmati" > Dr. Farkhondeh Hemmati</a>.
+
 #        - Description 2.
 #        - title: Robust Knowledge Acquisition in Answering Information-seeking Questions.
 #          contents:
@@ -30,55 +40,58 @@
 #      description:
 #        - <u>Thesis:</u> A Morphology-based Stemmer for the Persian language
 
+
+
 - title: Professional Experience
   type: time_table
   contents:
-    - title: Post-doctoral Fellow
-      institution: David R. Cheriton School of Computer Science, University of Waterloo, Canada.
-      year: 2023 - Now
+    - title: Research Assistant 
+      institution: AML/ATF department, ScotiaBank, Edmonton, Canada.
+      year: 2021 - 2022
 #      description:
 #        - Explore information retrieval models suitable for NLP tasks.
-    - title: Associate Researcher (Part-time)
-      institution: Huawei Noah's Ark Lab, Montreal, Canada.
-      year: 2021 - 2022
+    - title: Teacher Assistant
+      institution: <u>Search, knowledge, simulation course</u>, University of Alberta, Edmonton, Canada
+      year: 2020 - 2021
 #      description:
 #        - Work on sample efficiency in NLP and multilignual retrieval.
 
-    - title: Research Intern
-      institution: Huawei Noah's Ark Lab, Montreal, Canada.
-      year: 2020 - 2021
+    - title: AI Scientist
+      institution: Faroob Zaman Inc., Mashhad, Iran.
+      year: 2016 - 2020
 #      description:
 #        - Worked on sample efficiency and data augmentation in NLP.
 
-- title: Academic Service
+
+
+- title: Research Experience
   type: nested_list
   contents:
-    - title: Reviewing for Conferences
+    - title: Research Projects
       items:
-        - ACL Rolling Review
-        - EMNLP 2023
-        - CIKM 2023
-        - ACL 2023 (<u>Question Answering</u>)
-        - EACL 2023 (<u>Ethical and Sustainable NLP</u>)
-        - EMNLP 2022 (<u>Information Retrieval and Text Mining</u> & <u>Unsupervised and Weakly-Supervised Methods in NLP</u>)
-        - EMNLP 2021 (<u>Information Retrieval and Text Mining</u> & <u>Question Answering</u>)
-        - ACL-IJCNLP 2021 (<u>Question Answering</u>)
-        - NAACL 2021 (<u>Question Answering</u>)
-        - EACL 2021 (<u>Green and Sustainable NLP</u>)
-        - EMNLP 2020 (<u>Question Answering</u>)
-        - ACL 2020 (<u>Question Answering</u>)
-    - title: Reviewing for Workshops
-      items:
-        - Student Research Workshop (SRW) at ACL 2023 [<a href="https://acl2023-srw.github.io/">link</a>]
-        - Third DialDoc Workshop at ACL 2023 [<a href="https://doc2dial.github.io/workshop2023/">link</a>]
-        - Efficient Natural Language and Speech Processing (ENSLP) at NeurIPS 2022 [<a href="https://neurips2022-enlsp.github.io/">link</a>]
-        - Efficient Natural Language and Speech Processing (ENSLP) at NeurIPS 2021 [<a href="https://neurips2021-nlp.github.io/">link</a>]
-        - SustaiNLP at EMNLP 2021 [<a href="https://sites.google.com/view/sustainlp2021/home">link</a>]
-        - Student Research Workshop (SRW) at NAACL 2021 [<a href="https://naacl2021-srw.github.io/">link</a>]
-        - Student Research Workshop (SRW) at EACL 2021 [<a href="https://sites.google.com/view/eaclsrw2021/home">link</a>]
-        - SustaiNLP at EMNLP 2020 [<a href="https://sites.google.com/view/sustainlp2020">link</a>]
-        - Student Research Workshop (SRW) at ACL 2020 [<a href="https://sites.google.com/view/acl20studentresearchworkshop/">link</a>]
-        - Student Research Workshop (SRW) at ACL 2019 [<a href="https://sites.google.com/view/acl19studentresearchworkshop/">link</a>]
+        - E-commerce product matching model using Pre-trained Language Models (PLM) and tabular data<i>:</i> <u>TATEM</u>
+        - Introduced two product entity matching datasets using complementary product-specific tabular data <i>:</i> <u>Amazon*-Google, Walmart*-Amazon*</u>
+        - Fast and robust domain adaptation for automated essay scoring
+        - Few-shot entity linking in knowledge graphs using limited resources
+        - Automated essay scoring model based on cohesion, coherence and text diversity linguistic features
+        - Database integration between two large-scale databases at ScotiaBank
+        - Enhanced deep learning models for automated essay scoring
+        - Multi-class sentiment analysis using deep learning
+        - Developing an AI framework for microscope image processing
+        - Developing a deep learning model to predict chemical reaction
+        - Designing smart pair of glasses
+    # - title: Reviewing for Workshops
+    #   items:
+    #     - Student Research Workshop (SRW) at ACL 2023 [<a href="https://acl2023-srw.github.io/">link</a>]
+    #     - Third DialDoc Workshop at ACL 2023 [<a href="https://doc2dial.github.io/workshop2023/">link</a>]
+    #     - Efficient Natural Language and Speech Processing (ENSLP) at NeurIPS 2022 [<a href="https://neurips2022-enlsp.github.io/">link</a>]
+    #     - Efficient Natural Language and Speech Processing (ENSLP) at NeurIPS 2021 [<a href="https://neurips2021-nlp.github.io/">link</a>]
+    #     - SustaiNLP at EMNLP 2021 [<a href="https://sites.google.com/view/sustainlp2021/home">link</a>]
+    #     - Student Research Workshop (SRW) at NAACL 2021 [<a href="https://naacl2021-srw.github.io/">link</a>]
+    #     - Student Research Workshop (SRW) at EACL 2021 [<a href="https://sites.google.com/view/eaclsrw2021/home">link</a>]
+    #     - SustaiNLP at EMNLP 2020 [<a href="https://sites.google.com/view/sustainlp2020">link</a>]
+    #     - Student Research Workshop (SRW) at ACL 2020 [<a href="https://sites.google.com/view/acl20studentresearchworkshop/">link</a>]
+    #     - Student Research Workshop (SRW) at ACL 2019 [<a href="https://sites.google.com/view/acl19studentresearchworkshop/">link</a>]
 #
 #
 #- title: Academic Interests
@@ -98,6 +111,7 @@
   contents:
     - title: Sports
       items:
-      - 🏊 Member of University of Alberta Swim Club <a href="https://www.instagram.com/ualbertaswimclub/"><i class="fab fa-instagram"></i></a> (2016-2022)
-      - 🎾
-
+      # - 🏊 Member of University of Alberta Swim Club <a href="https://www.instagram.com/ualbertaswimclub/"><i class="fab fa-instagram"></i></a> (2016-2022)
+      - 🚲 Mountain biking
+      - 🏊 Swimming
+      - 🎾 Badminton
