update the publication- update the abstract of TATTOO model

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,6 +6,10 @@
   - firstname: ["Davood", "Davood Rafiei"]
     url: https://cs.ualberta.ca/~drafiei
 
+"Nayeem":
+  - firstname: ["Mir Tafseer", "Mir Tafseer Nayeem"]
+    url: https://tafseer-nayeem.github.io/
+
 "Zaiane":
   - firstname: ["Osmar",]
     url: https://cs.ualberta.ca/~zaiane
