--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,7 +18,7 @@
 
 
     - title: BSc.
-      institution: <a href="https://aut.ac.ir/en"> Amirkabir University of Technology (Polytechnique Tehran)</a>, Tehran, Iran
+      institution: <a href="https://aut.ac.ir/en"> Amirkabir University of Technology</a>, Tehran, Iran
       year: 2011
       description:
         - <u>Thesis:</u> Microscope images processing to predict fracture strength of nanoclay/polyamide 12 nanocomposite using CNN. 
