--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -6,6 +6,30 @@
 #    - name: Languages
 #      value: English, Persian
 
+- title: 👨‍💼 Professional Experience
+  type: time_table
+  contents:
+    - title: Research Assistant 
+      institution: <a href="https://www.ualberta.ca/computing-science/index.html">University of Alberta</a>, Edmonton, Canada.
+      year: 2022 - 2023
+
+    - title: Research Assistant 
+      institution: <a href="https://www.scotiabank.com/ca/en/about.html">AML/ATF department, ScotiaBank</a>, Edmonton, Canada.
+      year: 2021 - 2022
+#      description:
+#        - Explore information retrieval models suitable for NLP tasks.
+    # - title: Teacher Assistant
+    #   institution: <a href="https://apps.ualberta.ca/catalogue/course/cmput/455">Search, knowledge, simulation course</a>, University of Alberta, Edmonton, Canada
+    #   year: 2020 - 2021
+#      description:
+#        - Work on sample efficiency in NLP and multilignual retrieval.
+
+    - title: AI Scientist
+      institution: <a href="https://www.linkedin.com/company/faroob-zaman-inc./">Faroob Zaman Inc.</a>, Mashhad, Iran.
+      year: 2016 - 2020
+    #  description:
+
+
 - title: <html>&#127891</html>Education
   type: time_table
   contents:
@@ -18,7 +42,7 @@
 
 
     - title: BSc.
-      institution: <a href="https://aut.ac.ir/en"> Amirkabir University of Technology</a>, Tehran, Iran
+      institution: <a href="https://aut.ac.ir/en"> Amirkabir University of Technology (Polytechnique Tehran)</a>, Tehran, Iran
       year: 2011
       description:
         - <u>Thesis:</u> Microscope images processing to predict fracture strength of nanoclay/polyamide 12 nanocomposite using CNN. 
@@ -40,35 +64,17 @@
 #      description:
 #        - <u>Thesis:</u> A Morphology-based Stemmer for the Persian language
 
-
-
-- title: 👨‍💼 Professional Experience
-  type: time_table
-  contents:
-    - title: Research Assistant 
-      institution: <a href="https://www.scotiabank.com/ca/en/about.html">AML/ATF department, ScotiaBank</a>, Edmonton, Canada.
-      year: 2021 - 2022
-#      description:
-#        - Explore information retrieval models suitable for NLP tasks.
-    - title: Teacher Assistant
-      institution: <a href="https://apps.ualberta.ca/catalogue/course/cmput/455">Search, knowledge, simulation course</a>, University of Alberta, Edmonton, Canada
-      year: 2020 - 2021
-#      description:
-#        - Work on sample efficiency in NLP and multilignual retrieval.
-
-    - title: AI Scientist
-      institution: <a href="https://www.linkedin.com/company/faroob-zaman-inc./">Faroob Zaman Inc.</a>, Mashhad, Iran.
-      year: 2016 - 2020
-#      description:
-#        - Worked on sample efficiency and data augmentation in NLP.
+    #    - Worked on sample efficiency and data augmentation in NLP.
 
 
 
-- title: 👨‍💻 Research Experience
+- title: 👨‍💻 Related Projects
   type: nested_list
   contents:
-    - title: Research Projects
+    - title: Related Projects
       items:
+        - Time series forecasting models using deep multi-variate LSTM and ensemble models
+        - Implementing a risk management model using multi-modal data
         - Enhanced e-commerce product matching model using Pre-trained Language Models (PLM) and tabular data<i>:</i> <u>TAbular and Textual Entity Matching (TATEM)</u> and <u>TAble & Text Entity Matching as TOpology COonstruction (TATTOO)</u>
         - Introduced two product entity matching datasets using complementary product-specific tabular data <i>:</i> <u>Amazon*-Google, Walmart*-Amazon*</u>
         - Fast and robust domain adaptation for automated essay scoring
@@ -77,8 +83,6 @@
         - Database integration between two large-scale databases at ScotiaBank
         - Enhanced deep learning models for automated essay scoring
         - Multi-class sentiment analysis using deep learning
-        - Developing an AI framework for microscope image processing
-        - Developing a deep learning model to predict chemical reaction
     # - title: Reviewing for Workshops
     #   items:
     #     - Student Research Workshop (SRW) at ACL 2023 [<a href="https://acl2023-srw.github.io/">link</a>]
