--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Naeimabadi
 email: naeimaba@ualberta.ca
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Perosnal website of Ali Naeimabadi
+  Personal website of Ali Naeimabadi
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
